# caja-actions-eol

./: AUTHORS  COPYING  ChangeLog  ChangeLog-2008  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  INSTALL  MAINTAINERS  Makefile  Makefile.am  Makefile.in  NEWS  README  README-MATECONF  README.md  TODO  aclocal.m4  autogen.sh  caja-actions.spec  components.txt  config.status  configure  configure.ac  libtool  mate-doc-utils.make  migrate.sh
data/: Makefile  Makefile.am  Makefile.in  caja-actions-prefs.schemas.in
data/actions/: Makefile.am  README  my-first-na-action.desktop  my-first-na-menu.desktop  open-terminal-here.desktop  show-na-parameters.desktop
data/exports/: Makefile.am  README
data/mateconf-schemas/: Makefile.am  README  caja-actions-confs.schemas.in  caja-actions-prefs.schemas.in
docs/cact/: Makefile.am  caja-actions-config-tool.omf.in  mate-doc-utils-ca.make
docs/reference/: Makefile.am  Makefile.in  caja-actions-docs.xml  caja-actions-overrides.txt  caja-actions-sections.txt  caja-actions.types  na-about.xml  na-compiling.xml  na-dist-content.xml  na-getting.xml  na-what-is-it.xml
icons/32x32/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in
src/api/: Makefile  Makefile.am  Makefile.in  README  na-boxed.h  na-core-utils.h  na-data-boxed.h  na-data-def.h  na-data-types.h  na-dbus.h  na-extension.h  na-icontext.h  na-iduplicable.h  na-iexporter.h  na-ifactory-object-data.h  na-ifactory-object.h  na-ifactory-provider-provider.h  na-ifactory-provider.h  na-iimporter.h  na-iio-provider.h  na-mateconf-monitor.h  na-mateconf-utils.h  na-object-action.h  na-object-api.h  na-object-id.h  na-object-item.h  na-object-menu.h  na-object-profile.h  na-object.h  na-timeout.h
src/cact/: Makefile.am  Makefile.in  base-application-class.h  base-application.c  base-application.h  base-assistant.c  base-assistant.h  base-builder.c  base-builder.h  base-dialog.c  base-dialog.h  base-gtk-utils.c  base-gtk-utils.h  base-iprefs.c  base-iprefs.h  base-isession.c  base-isession.h  base-iunique.c  base-iunique.h  base-keysyms.h  base-marshal.c  base-marshal.def  base-marshal.h  base-window-class.h  base-window.c  base-window.h  cact-add-capability-dialog.c  cact-add-capability-dialog.h  cact-add-capability.ui  cact-add-scheme-dialog.c  cact-add-scheme-dialog.h  cact-add-scheme.ui  cact-application.c  cact-application.h  cact-assistant-export.c  cact-assistant-export.h  cact-assistant-export.ui  cact-assistant-import.c  cact-assistant-import.h  cact-assistant-import.ui  (+114 more)
src/core/: Makefile  Makefile.am  Makefile.in  README  na-about.c  na-about.h  na-boxed.c  na-core-utils.c  na-data-boxed.c  na-data-def.c  na-data-types.c  na-desktop-environment.c  na-desktop-environment.h  na-export-format.c  na-export-format.h  na-exporter.c  na-exporter.h  na-factory-object.c  na-factory-object.h  na-factory-provider.c  na-factory-provider.h  na-gtk-utils.c  na-gtk-utils.h  na-iabout.c  na-iabout.h  na-icontext-factory.c  na-icontext.c  na-iduplicable.c  na-iexporter.c  na-ifactory-object.c  na-ifactory-provider.c  na-iimporter.c  na-iio-provider.c  na-import-mode.c  na-import-mode.h  na-importer-ask.c  na-importer-ask.h  na-importer-ask.ui  na-importer.c  na-importer.h  (+43 more)
src/io-desktop/: Makefile  Makefile.am  Makefile.in  cadp-desktop-file.c  cadp-desktop-file.h  cadp-desktop-provider.c  cadp-desktop-provider.h  cadp-formats.c  cadp-formats.h  cadp-keys.c  cadp-keys.h  cadp-module.c  cadp-monitor.c  cadp-monitor.h  cadp-reader.c  cadp-reader.h  cadp-utils.c  cadp-utils.h  cadp-writer.c  cadp-writer.h  cadp-xdg-dirs.c  cadp-xdg-dirs.h  nadp-desktop-file.c  nadp-desktop-file.h  nadp-desktop-provider.c  nadp-desktop-provider.h  nadp-keys.c  nadp-keys.h  nadp-module.c  nadp-reader.c  nadp-reader.h  nadp-utils.c  nadp-utils.h  nadp-writer.c  nadp-writer.h  nadp-xdg-dirs.c  nadp-xdg-dirs.h
src/io-mateconf/: Makefile  Makefile.am  Makefile.in  nagp-keys.h  nagp-mateconf-provider.c  nagp-mateconf-provider.h  nagp-module.c  nagp-reader.c  nagp-reader.h  nagp-writer.c  nagp-writer.h
src/io-xml/: Makefile  Makefile.am  Makefile.in  caxml-formats.c  caxml-formats.h  caxml-keys.c  caxml-keys.h  caxml-module.c  caxml-provider.c  caxml-provider.h  caxml-reader.c  caxml-reader.h  caxml-writer.c  caxml-writer.h  naxml-formats.c  naxml-formats.h  naxml-keys.c  naxml-keys.h  naxml-module.c  naxml-provider.c  naxml-provider.h  naxml-reader.c  naxml-reader.h  naxml-writer.c  naxml-writer.h
src/nact/: Makefile  Makefile.am  Makefile.in  base-application-class.h  base-application.h  base-assistant.h  base-builder.h  base-dialog.c  base-dialog.h  base-iprefs.h  base-window-class.h  base-window.c  base-window.h  caja-actions-config-tool.actions  caja-actions-config-tool.ui  egg-tree-multi-dnd.h  nact-application.c  nact-application.h  nact-assistant-export.c  nact-assistant-export.h  nact-assistant-import.c  nact-assistant-import.h  nact-clipboard.c  nact-clipboard.h  nact-confirm-logout.c  nact-confirm-logout.h  nact-export-ask.c  nact-export-ask.h  nact-export-format.c  nact-export-format.h  nact-gtk-utils.c  nact-gtk-utils.h  nact-iaction-tab.c  nact-iaction-tab.h  nact-iactions-list-bis.c  nact-iactions-list-priv.c  nact-iactions-list-priv.h  nact-iactions-list.c  nact-iactions-list.h  nact-iadvanced-tab.c  (+49 more)
src/plugin-menu/: Makefile  Makefile.am  Makefile.in  README  caja-actions.c  caja-actions.h  caja-module.c
src/plugin-tracker/: Makefile  Makefile.am  Makefile.in  na-tracker-dbus-glib.xml  na-tracker-dbus.c  na-tracker-dbus.h  na-tracker-dbus.xml  na-tracker-gdbus.xml  na-tracker-plugin.c  na-tracker.c  na-tracker.h
src/test/: Makefile  Makefile.am  Makefile.in  test-iface-base.c  test-iface-base.h  test-iface-derived.c  test-iface-derived.h  test-iface-iface.c  test-iface-iface.h  test-iface.c  test-iface2.c  test-include.c  test-module-plugin.c  test-module.c  test-parse-uris.c  test-reader.c  test-virtuals-without-test.c  test-virtuals.c
src/utils/: Makefile  Makefile.am  Makefile.in  caja-actions-new.c  caja-actions-run.c  (+8 more)
(+368 files in other folders)
